--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "enyticaret_33011456_203301129_master_kopya",
-    "short_name": "enyticaret_33011456_203301129_master_kopya",
+    "name": "untitled2",
+    "short_name": "untitled2",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
